code fence内のprismjsのスタイリングに干渉し崩れていたCSSの修正

--- a/theme/lycolia/lyco/lyco.css
+++ b/theme/lycolia/lyco/lyco.css
@@ -366,7 +366,7 @@ div.art-info span.tags:after {
 div.art-info span.tag:not(:last-child):after {
 	content:		',';
 }
-span.tag:not(:last-child) {
+span.tag:not(:last-child):not(code span) {
 	margin-right:		0.5em;
 }
 
