--- a/theme/lycolia/lyco/lyco.css
+++ b/theme/lycolia/lyco/lyco.css
@@ -269,7 +269,8 @@ article.wiki div.body {
 }
 /* 記事ヘッダ */
 div.art-info {
-	text-align:		right;
+	display: flex;
+	justify-content: space-between;
 	line-height:		100%;
 	font-size:		90%;
 	padding:		0;
