lycoテーマで日付のCSSを右寄せに戻した

--- a/theme/lycolia/lyco/lyco.css
+++ b/theme/lycolia/lyco/lyco.css
@@ -269,8 +269,7 @@ article.wiki div.body {
 }
 /* 記事ヘッダ */
 div.art-info {
-	display: flex;
-	justify-content: space-between;
+	text-align: right;
 	line-height:		100%;
 	font-size:		90%;
 	padding:		0;
