記事中のtable要素が上揃えになるように修正

--- a/theme/lycolia/lyco/lyco.css
+++ b/theme/lycolia/lyco/lyco.css
@@ -481,6 +481,7 @@ dt { font-weight:	bold; }
 	margin:			0px;
 	padding:		2px;
 	border-bottom:		1px dashed #000;
+	vertical-align: top;
 }
 .body table th,
 .ui-dialog table th {
